--- a/index.html
+++ b/index.html
@@ -1,12 +1,167 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/forT.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>My Portfolio</title>
+  <meta name="description" content="Personal website / portfolio" />
+  <style>
+    :root{
+      --bg:#0b0d12; --surface:#121521; --text:#e6eaf2; --muted:#9aa3b2; --brand:#5cc8ff; --brand-2:#8af3ff;
+      --card:#0f111a; --shadow:0 10px 30px rgba(0,0,0,.25);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{margin:0;font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;color:var(--text);background:linear-gradient(120deg,var(--bg),#0e1220)}
+    a{color:var(--brand);text-decoration:none}
+    a:hover{text-decoration:underline}
+    .wrap{max-width:1100px;margin:0 auto;padding:24px}
+    header{position:sticky;top:0;backdrop-filter:saturate(120%) blur(6px);background:rgba(11,13,18,.6);border-bottom:1px solid rgba(255,255,255,.06);z-index:20}
+    .nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
+    .brand{display:flex;align-items:center;gap:12px;font-weight:700}
+    .logo{width:34px;height:34px;border-radius:10px;background:conic-gradient(from 210deg,var(--brand),var(--brand-2));box-shadow:var(--shadow)}
+    .navlinks{display:flex;gap:18px;align-items:center}
+    .navlinks a{color:var(--text);opacity:.8}
+    .navlinks a:hover{opacity:1}
+    .menu-btn{display:none}
+
+    .hero{display:grid;grid-template-columns:1.2fr .8fr;gap:32px;align-items:center;padding:64px 0}
+    .hero h1{font-size:clamp(28px,4.5vw,48px);line-height:1.15;margin:0 0 12px}
+    .hero p{color:var(--muted);margin:0 0 24px}
+    .cta{display:flex;gap:12px;flex-wrap:wrap}
+    .btn{display:inline-block;padding:12px 16px;border-radius:12px;background:var(--brand);color:#001018;font-weight:700;border:0;box-shadow:var(--shadow)}
+    .btn.alt{background:transparent;border:1px solid rgba(255,255,255,.15);color:var(--text)}
+    .card{background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:16px;padding:20px;box-shadow:var(--shadow)}
+
+    section{padding:28px 0}
+    h2{font-size:clamp(22px,3vw,30px);margin:0 0 16px}
+    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
+    .project{transition:transform .12s ease, box-shadow .2s ease}
+    .project:hover{transform:translateY(-2px)}
+    .project h3{margin:0 0 8px;font-size:18px}
+    .project p{margin:0;color:var(--muted)}
+
+    .about{display:grid;grid-template-columns:1fr 1fr;gap:24px}
+    .about .card p{margin:0}
+
+    .contact .card{display:grid;gap:10px}
+    .pill{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:999px;border:1px solid rgba(255,255,255,.14);color:var(--text)}
+
+    footer{padding:30px 0;color:var(--muted);font-size:14px}
+
+    @media (max-width:900px){
+      .hero{grid-template-columns:1fr;}
+      .grid{grid-template-columns:1fr 1fr}
+      .about{grid-template-columns:1fr}
+    }
+    @media (max-width:640px){
+      .grid{grid-template-columns:1fr}
+      .navlinks{display:none}
+      .menu-btn{display:inline-flex;align-items:center;gap:8px;border:1px solid rgba(255,255,255,.15);background:transparent;color:var(--text);padding:8px 10px;border-radius:10px}
+      .mobile{display:none;flex-direction:column;gap:8px;padding:12px 0}
+      .mobile a{padding:10px 12px;border:1px solid rgba(255,255,255,.1);border-radius:10px}
+      .mobile.open{display:flex}
+    }
+  </style>
 </head>
 <body>
-    <img src="images/11dR2hEgtN5KoM.webp" alt="gif of cat">
+  <header>
+    <div class="wrap nav">
+      <div class="brand"><div class="logo" aria-hidden="true"></div> <span id="site-title">Your Name</span></div>
+      <nav class="navlinks" aria-label="Primary">
+        <a href="#projects">Projects</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href="resume.pdf">Resume</a>
+      </nav>
+      <button class="menu-btn" aria-expanded="false" aria-controls="mobileMenu" onclick="toggleMenu(this)">Menu ▾</button>
+    </div>
+    <div class="wrap mobile" id="mobileMenu" aria-label="Mobile menu">
+      <a href="#projects" onclick="toggleMenu()">Projects</a>
+      <a href="#about" onclick="toggleMenu()">About</a>
+      <a href="#contact" onclick="toggleMenu()">Contact</a>
+      <a href="resume.pdf" onclick="toggleMenu()">Resume</a>
+    </div>
+  </header>
+
+  <main class="wrap">
+    <section class="hero">
+      <div>
+        <h1>Hello, I’m <span style="color:var(--brand)">Your Name</span>.<br> I build things for the web & hardware.</h1>
+        <p>Short intro goes here. Mention what you do, the tech/tools you love, and the kind of roles or projects you’re after.</p>
+        <div class="cta">
+          <a class="btn" href="#projects">View Projects</a>
+          <a class="btn alt" href="#contact">Contact Me</a>
+        </div>
+      </div>
+      <div class="card">
+        <h3 style="margin-top:0">Quick Stats</h3>
+        <ul style="margin:0;padding-left:18px;color:var(--muted)">
+          <li>Location: City, Country</li>
+          <li>Focus: Embedded / Web / Controls</li>
+          <li>Currently: Seeking internships</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="grid">
+        <article class="card project">
+          <h3>Project One</h3>
+          <p>One-liner about what it does and tech used. <em>(HTML, CSS, JS)</em></p>
+          <p><a href="#">Live</a> · <a href="#">Code</a></p>
+        </article>
+        <article class="card project">
+          <h3>Project Two</h3>
+          <p>Concise description and result/impact. <em>(C, STM32, SPI)</em></p>
+          <p><a href="#">Demo</a> · <a href="#">Repo</a></p>
+        </article>
+        <article class="card project">
+          <h3>Project Three</h3>
+          <p>Highlight a cool technical challenge you solved.</p>
+          <p><a href="#">Write‑up</a> · <a href="#">Repo</a></p>
+        </article>
+      </div>
+    </section>
+
+    <section id="about" class="about">
+      <div class="card">
+        <h2>About</h2>
+        <p>Write 3–5 sentences about your background, interests, and what you’re learning. Keep it friendly and specific. Mention clubs, labs, internships, or favorite tools.</p>
+      </div>
+      <div class="card">
+        <h2>Skills</h2>
+        <ul style="margin:0;padding-left:18px;color:var(--muted)">
+          <li>Languages: C/C++, Python, Verilog, JS</li>
+          <li>Tools: KiCad, Git, Oscilloscope, Logic Analyzer</li>
+          <li>Platforms: STM32, ESP32, Raspberry Pi</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="contact" class="contact">
+      <h2>Contact</h2>
+      <div class="card">
+        <div class="pill">📧 <a href="mailto:you@example.com">you@example.com</a></div>
+        <div class="pill">💼 <a href="https://www.linkedin.com/in/your-handle">LinkedIn</a></div>
+        <div class="pill">💻 <a href="https://github.com/your-handle">GitHub</a></div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="wrap">© <span id="y"></span> Your Name · Built with ❤️ & GitHub Pages</div>
+  </footer>
+
+  <script>
+    function toggleMenu(btn){
+      const m=document.getElementById('mobileMenu');
+      const open = !m.classList.contains('open');
+      m.classList.toggle('open', open);
+      if(btn) btn.setAttribute('aria-expanded', String(open));
+    }
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
